--- a/style.css
+++ b/style.css
@@ -7,19 +7,18 @@ body {
     text-align: justify;
   }
   
-  h1, h2, h3 {
+  h1,
+  h2,
+  h3 {
     color: #003366;
     font-family: Georgia, serif;
   }
   
   a {
-    color: #0066cc;
+    color: #0066cc !important;
     text-decoration: none;
   }
-  
-  a:hover {
-    color: #ff6600;
-  }
+
   
   .title {
     font-size: 24px;
@@ -27,22 +26,30 @@ body {
     color: darkred;
   }
   
-  #highlight {
-    background-color: yellow;
-    font-style: italic;
-  }
-
-  a {
-    color: green !important;
+  .links {
+    font-size: 20px;
+    margin-right: 20px;
   }
   
-
-ul {
+  
+  #main-title {
+    font-size: 32px;
+    color: darkred;
+    font-style: italic;
+    line-height: 1.4;
+    text-align: center;
+  }
+  
+  a {
+    color: green 
+  }
+  
+  ul {
     list-style-type: square;
     color: #444;
     margin-left: 20px;
   }
-
+  
   ol {
     list-style-type: upper-roman;
     color: #444;
@@ -60,25 +67,27 @@ ul {
     margin-left: 20px;
     font-style: italic;
   }
-
+  
   table {
     width: 90%;
     border-collapse: collapse;
     margin-bottom: 20px;
   }
   
-  table, th, td {
+  table,
+  th,
+  td {
     border: 1px solid #888;
     padding: 10px;
   }
   
   th {
     background-color: #cceeff;
-    color: #000;
+    color: #444;
   }
   
   td {
     background-color: #f9f9f9;
   }
-  
+
   
